--- a/advertisers.html
+++ b/advertisers.html
@@ -1,124 +1,128 @@
-<!doctype html>
-<html>
-  <head>
-    <title>kivimobi</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="kivimobi">
-    <meta name="keywords" content="kivimobi publisher advertiser">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="advertisers-style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!--[if IE 6]>
-	<style type="text/css">
-		* html .group {
-			height: 1%;
-		}
-	</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>kivimobi</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="kivimobi">
+  <meta name="keywords" content="kivimobi publisher advertiser">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <!--[if IE 6]>
+  <style type="text/css">
+    * html .group {
+      height: 1%;
+    }
+  </style>
   <![endif]-->
-    <!--[if IE 7]>
-	<style type="text/css">
-		*:first-child+html .group {
-			min-height: 1px;
-		}
-	</style>
+  <!--[if IE 7]>
+  <style type="text/css">
+    *:first-child+html .group {
+      min-height: 1px;
+    }
+  </style>
   <![endif]-->
-    <!--[if lt IE 9]>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <!--[if lt IE 9]>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
   <![endif]-->
-  </head>
-  <body>
-    <div class="global_container_">
-      <section class="row-2">
-        <img class="logo" src="advertisers-images/logo.png" alt="">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-2 col-sm-3 col-xs-12 col-md-offset-2">
-              <a href="index.html"><p class="home">HOME</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12 ">
-              <a href="top-offers.html"><p class="text">TOP OFFERS</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12 clearfix">
-              <a href="publisher.html"><p class="publishers">PUBLISHERS</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12">
-              <a href="advertisers.html"><p class="advertisers">ADVERTISERS</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12">
-              <a href="contact-info.html"><p class="text-2">CONTACT INFO</p></a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="layer-wrapper">
-        <img class="layer" src="advertisers-images/2.jpg" alt="">
-      </section>
-      <section class="group-2">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <div class="col-data-wrapper-2">
-                <div class="col">
-                  <p class="text-3">Diversified Traffic Sources &amp; Excellent Affiliate Channels</p>
-                  <img class="layer-5" src="advertisers-images/6.png" alt="">
-                  <p class="text-4">Experienced and committed in-house media buying team<br><br>Global partnerships with 3000+world's top publishers, influencers, and marketing agencies<br><br>In-depth cooperation with leading social media and search media</p>
-                </div>
-                <img class="advertiese2" src="advertisers-images/advertiese2.png" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="layer-wrapper-2">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 col-sm-6 col-xs-12 col-md-offset-4">
-<!--              <img class="layer-2" src="advertisers-images/5.png" alt="">-->
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="group-3">
-<!--        <img class="layer-4" src="advertisers-images/6_2.png" alt="">-->
-        <div class="container">
-          <div class="row">
-            <div>
-              <div class="col-data-wrapper-3">
-                <div class="col-2">
-                  <p class="text-5">Real-Time Tracking &amp; Attribution</p>
-                  <img class="layer-3" src="advertisers-images/6.png" alt="">
-                  <p class="text-6">From initial click to final sale, our real-time tracking system monitors and attributes every data point like a hawk. These insights are then used to optimize and improve your campaign's performance overtime</p>
-                </div>
-                <img class="advertiese3" src="advertisers-images/advertiese3.jpg" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="text-wrapper">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <p class="text-7">Our partnerships are built on value, scaled with trust, and measured solely by results.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="group-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-5 col-xs-12">
-              <div class="col-data-wrapper-4">
-                <p class="text-8"><strong class="text-style">Our Office</strong><br>K.Wah Commercial Building, 18Java Road Hong Kong</p>
-                <p class="text-9">Copyright 2024-KiviMobi—All rights reserved.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+</head>
+<body>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark fs-4 px-4 bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img class="logo" src="images/logo.png" alt=""/>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mb-2 mb-md-0 ms-auto">
+          <li class="nav-item fs-4 px-4">
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item fs-4 px-4">
+            <a class="nav-link" href="top-offers.html">TOP OFFERS</a>
+          </li>
+          <li class="nav-item fs-4 px-4">
+            <a class="nav-link" href="publisher.html">PUBLISHERS</a>
+          </li>
+          <li class="nav-item fs-4 px-4">
+            <a class="nav-link" href="advertisers.html">ADVERTISERS</a>
+          </li>
+          <li class="nav-item fs-4 px-4">
+            <a class="nav-link" href="contact-info.html">CONTACT INFO</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </body>
+  </nav>
+</header>
+<main>
+  <section>
+    <div class="bg-light rounded-3">
+      <div class="container-fluid p-0">
+        <img class="img-fluid" src="images/adv-2.jpg" alt="">
+      </div>
+    </div>
+  </section>
+  <section>
+      <div class="container p-5">
+        <div class="row w-80 gap-4">
+          <div class="col-12 col-lg-7 d-flex flex-column justify-content-center">
+            <p class="fs-2">Diversified Traffic Sources & Excellent Affiliate Channels</p>
+            <div class="w-10 py-4">
+              <img src="images/adv-6.png" alt="" class="w-10">
+            </div>
+            <p class="fs-5 pb-3">Experienced and committed in-house media buying team</p>
+            <p class="fs-5 pb-3">Global partnerships with 3000+world's top publishers, influencers, and marketing agencies</p>
+            <p class="fs-5">In-depth cooperation with leading social media and search media</p>
+          </div>
+          <div class="col-12 col-lg fs-4 px-4-5">
+            <img src="images/advertiser-2.png" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="container p-5">
+        <div class="row w-80 gap-4">
+          <div class="col-12 col-lg fs-4 px-4-5">
+            <img src="images/advertiser-3.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-12 col-lg-7 d-flex flex-column justify-content-center">
+            <p class="fs-2">Real-Time Tracking & Attribution</p>
+            <div class="w-10 py-4">
+              <img src="images/adv-6.png" alt="" class="w-10">
+            </div>
+            <p class="fs-5 pb-3">From initial click to final sale, our real-time tracking system monitors and attributes every data point like a hawk. These insights are then used to optimize and improve your campaign's performance overtime</p>
+          </div>
+        </div>
+      </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <p class="fs-3 fs-md-2">Our partnerships are built on value, scaled with trust, and measured solely by results.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container-fluid bg-dark text-white py-3 w-80">
+      <div class="row">
+        <div class="col-12 py-5">
+          <p>Our Office</p>
+          <p>K.Wah Commercial Building, 18Java Road Hong Kong</p>
+          <p>Copyright 2024-KiviMobi—All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+</main>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+</body>
 </html>
