--- a/contact-info.html
+++ b/contact-info.html
@@ -1,167 +1,158 @@
-<!doctype html>
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <title>kivimobi</title>
     <meta charset="UTF-8">
     <meta name="description" content="kivimobi">
     <meta name="keywords" content="kivimobi publisher advertiser">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="contact-info-style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!--[if IE 6]>
-	<style type="text/css">
-		* html .group {
-			height: 1%;
-		}
-	</style>
-  <![endif]-->
-    <!--[if IE 7]>
-	<style type="text/css">
-		*:first-child+html .group {
-			min-height: 1px;
-		}
-	</style>
-  <![endif]-->
-    <!--[if lt IE 9]>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <![endif]-->
-  </head>
-  <body>
-    <div class="global_container_">
-      <section class="group-2">
-        <img class="logo" src="contact-info-images/logo.png" alt="">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-2 col-sm-3 col-xs-12 col-md-offset-2">
-              <a href="index.html"><p class="home">HOME</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12 ">
-              <a href="top-offers.html"><p class="text">TOP OFFERS</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12 clearfix">
-              <a href="publisher.html"><p class="publishers">PUBLISHERS</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12">
-              <a href="advertisers.html"><p class="advertisers">ADVERTISERS</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12">
-              <a href="contact-info.html"><p class="text-2">CONTACT INFO</p></a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="group-3">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <p class="text-3">Become A KiviMobi Partner Today</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="group-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 col-xs-12">
-              <div class="col-3">
-                <p class="text-7">Publishers &nbsp;Contact</p>
-                <p class="shelly">Shelly</p>
-                <div class="row-2-2 clearfix">
-                  <div class="col-6">
-                    <img class="layer-3" src="contact-info-images/3.png" alt="">
-                    <img class="layer-4" src="contact-info-images/4.png" alt="">
-                  </div>
-                  <p class="text-8">live:shellyasan<br>Tony68989</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-xs-12">
-              <div class="col-2">
-                <p class="text-4">Advertisers &nbsp;Contact</p>
-                <p class="text-5">Julia Zhu</p>
-                <div class="row-5 clearfix">
-                  <div class="col-4">
-                    <img class="layer" src="contact-info-images/3.png" alt="">
-                    <img class="layer-2" src="contact-info-images/2.png" alt="">
-                  </div>
-                  <p class="text-6">live:.cid.ece2b55bc943f2e5<br>Julia3zhu</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="group-wrapper">
-        <div class="container" style="max-width: 50%; margin: 0 auto;">
-<!--          <div class="row">-->
-<!--            <iframe height="679" src="http://jsform3.com/web/formview/66cec385fc918f1ad7462c99?_ed=1"-->
-<!--                    allowTransparency="true" frameborder="0" style="width:100%; border:none">-->
-<!--            </iframe>-->
-<!--&lt;!&ndash;            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdVf5v9JOObcL9y7Y1B_ooVR4eNDjCAVAzV6xxWPdrDzRaVOA/viewform?embedded=true"&ndash;&gt;-->
-<!--&lt;!&ndash;                    height="551" frameborder="0" marginheight="0" marginwidth="0" style="width:100%; border:none">&ndash;&gt;-->
-<!--&lt;!&ndash;              Loading…&ndash;&gt;-->
-<!--&lt;!&ndash;            </iframe>&ndash;&gt;-->
-<!--          </div>-->
-                <form role="form">
-                  <p class="text-9">contact us</p>
-                  <br>
-                  <input type="text" class="form-control" id="name" placeholder="Full name*"/>
-                  <br>
-                  <input type="text" class="form-control" id="email" placeholder="Email Address*"/>
-                  <br>
-                  <input type="text" class="form-control" id="interested" placeholder="I am interested in..."/>
-                  <br>
-                  <input type="text" class="form-control" id="" placeholder="How did you hear about us?*">
-                  <br>
-                  <textarea class="form-control" rows="5" placeholder="Your message(optional)"></textarea>
-                  <br>
-                  <div class="text-center mt-5">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </div>
-                </form>
-          </div>
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
-<!--          <div class="row">-->
-<!--            <div class="col-xs-12">-->
-<!--              <div class="group-5">-->
-<!--                <p class="text-9">contact us</p>-->
-<!--                <div class="layer-holder">-->
-<!--                  <p class="text-15">Full name*</p>-->
-<!--                </div>-->
-<!--                <div class="layer-holder-2">-->
-<!--                  <p class="text-16">Email Address*</p>-->
-<!--                </div>-->
-<!--                <div class="layer-holder-3">-->
-<!--                  I am interested in...*-->
-<!--                </div>-->
-<!--                <div class="layer-holder-4">-->
-<!--                  How did you hear about us?*-->
-<!--                </div>-->
-<!--                <div class="layer-holder-5">-->
-<!--                  Your message(optional)-->
-<!--                </div>-->
-<!--                <div class="layer-holder-6">-->
-<!--                  SUBMIT-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-      </section>
-      <section class="group-6">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-5 col-xs-12">
-              <div class="col-data-wrapper-2">
-                <p class="text-13"><strong class="text-style">Our Office</strong><br>K.Wah Commercial Building, 18Java Road Hong Kong</p>
-                <p class="text-14">Copyright 2024-KiviMobi—All rights reserved.</p>
-              </div>
+    <style>
+        .image-text-container{
+            display: flex;
+            align-items: center;
+        }
+
+        .image-text-container .img{
+            width: 20px;
+            height: 20px;
+            margin-right: 0.5rem;
+        }
+
+        .image-text-container .text{
+            font-size: 1rem;
+        }
+    </style>
+
+    <!--[if IE 6]>
+    <style type="text/css">
+        * html .group {
+            height: 1%;
+        }
+    </style>
+    <![endif]-->
+    <!--[if IE 7]>
+    <style type="text/css">
+        *:first-child+html .group {
+            min-height: 1px;
+        }
+    </style>
+    <![endif]-->
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+<header>
+    <nav class="navbar navbar-expand-md navbar-dark fs-4 px-4 bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img class="logo" src="images/logo.png" alt=""/>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mb-2 mb-md-0 ms-auto">
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" href="top-offers.html">TOP OFFERS</a>
+                    </li>
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" href="publisher.html">PUBLISHERS</a>
+                    </li>
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" href="advertisers.html">ADVERTISERS</a>
+                    </li>
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" href="contact-info.html">CONTACT INFO</a>
+                    </li>
+                </ul>
             </div>
-          </div>
         </div>
-      </section>
-    </div>
-  </body>
+    </nav>
+</header>
+<main>
+    <section>
+        <div class="container-fluid p-0">
+            <div class="row">
+                <div class="col-12" style="position: relative">
+                    <img src="images/contact-info-banner.png" class="img-fluid" alt="" style="margin-top: -15px">
+                    <div class="text-center" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+                        <p class="fs-1 text-white">Become A KiviMobi Partner Today</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="row align-items-md-stretch justify-content-center my-1 px-sm-5">
+            <div class="col-12 col-md-4 m-4">
+                <div class="h-100 p-5 bg-light border rounded-3 text-center">
+                    <h2>Publishers  Contact</h2>
+                    <h3>Shell</h3>
+                    <div class="col py-2">
+                        <div class="image-text-container justify-content-center">
+                            <img src="images/live.png" alt="" class="img">
+                            <span class="fs-5 text">Live: shellysan</span>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="image-text-container justify-content-center">
+                            <img src="images/wechat.png" alt="" class="img">
+                            <span class="fs-5 text">WeChat: Tony68989</span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-12 col-md-4 m-4">
+                <div class="h-100 p-5 bg-light border rounded-3 text-center">
+                    <h2>Advertisers  Contact</h2>
+                    <h3>Julia Zhu</h3>
+                    <div class="col py-2">
+                        <div class="image-text-container justify-content-center">
+                            <img src="images/live.png" alt="" class="img">
+                            <span class="fs-5 text">Live:.cid.ece2b55bc943f2e5</span>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="image-text-container justify-content-center">
+                            <img src="images/wechat.png" alt="" class="img">
+                            <span class="fs-5 text">WeChat: Julia3zhu</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact-form">
+        <div class="container">
+            <div class="row">
+                <iframe style="width: 100%; height: 530px" src="https://jsform3.com/web/formview/66cec385fc918f1ad7462c99?_ed=1" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container-fluid bg-dark text-white py-3">
+            <div class="row">
+                <div class="col-12 py-5">
+                    <p>Our Office</p>
+                    <p>K.Wah Commercial Building, 18Java Road Hong Kong</p>
+                    <p>Copyright 2024-KiviMobi—All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+</main>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+</body>
 </html>
