--- a/layout.html
+++ b/layout.html
@@ -9,7 +9,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="css/kivimobi.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <!--[if IE 6]>
     <style type="text/css">
@@ -31,7 +30,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fs-4 px-4 bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img class="logo" src="images/logo.png" alt=""/>
@@ -62,34 +61,7 @@
     </nav>
 </header>
 <main>
-    <section>
-        <div class="bg-light rounded-3">
-            <div class="container-fluid p-0">
-                <img class="img-fluid" src="images/top.jpg" alt="">
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="container py-5">
-            <div class="row align-items-center mx-auto w-80 px-5 py-5">
-                <div class="col-12 col-md-7">
-                    <div class="colored-line d-flex align-items-center">
-                        <span><p class="fs-3">Explore, Convert, Profit</p></span>
-                    </div>
-                    <p class="fs-2">Become Our Next Super Affiliate!</p>
-                    <p class="fs-5">Join us in our Skype channel and unlock a world of top converting offers with dedicated affiliate managers. Let's skyrocket your success together!
 
-                        This is also the fastest way to get latest hot exclusive offers.</p>
-                    <div class="col-6 col-md-6 col-lg-4 pb-5">
-                        <a href="contact-info.html#contact-form" class="btn btn-primary btn-dark" role="button">Join Us Now >></a>
-                    </div>
-                </div>
-                <div class="col-12 col-md-5">
-                    <img src="images/telegroup.jpg" class="img-fluid" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
     <footer>
         <div class="container-fluid bg-dark text-white py-3">
             <div class="row">
