--- a/publisher.html
+++ b/publisher.html
@@ -1,184 +1,150 @@
-<!doctype html>
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <title>kivimobi</title>
     <meta charset="UTF-8">
     <meta name="description" content="kivimobi">
     <meta name="keywords" content="kivimobi publisher advertiser">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="publisher-style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="css/kivimobi.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <!--[if IE 6]>
-	<style type="text/css">
-		* html .group {
-			height: 1%;
-		}
-	</style>
-  <![endif]-->
+    <style type="text/css">
+        * html .group {
+            height: 1%;
+        }
+    </style>
+    <![endif]-->
     <!--[if IE 7]>
-	<style type="text/css">
-		*:first-child+html .group {
-			min-height: 1px;
-		}
-	</style>
-  <![endif]-->
+    <style type="text/css">
+        *:first-child+html .group {
+            min-height: 1px;
+        }
+    </style>
+    <![endif]-->
     <!--[if lt IE 9]>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <![endif]-->
-  </head>
-  <body>
-    <div class="global_container_">
-      <section class="group-2">
-        <img class="logo" src="publisher-images/logo_2.png" alt="">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-2 col-sm-3 col-xs-12 col-md-offset-2">
-              <a href="index.html"><p class="home">HOME</p></a>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+<header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img class="logo" src="images/logo.png" alt=""/>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mb-2 mb-md-0 ms-auto">
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" href="top-offers.html">TOP OFFERS</a>
+                    </li>
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" href="publisher.html">PUBLISHERS</a>
+                    </li>
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" href="advertisers.html">ADVERTISERS</a>
+                    </li>
+                    <li class="nav-item fs-4 px-4">
+                        <a class="nav-link" href="contact-info.html">CONTACT INFO</a>
+                    </li>
+                </ul>
             </div>
-            <div class="col-md-2 col-sm-3 col-xs-12 ">
-              <a href="top-offers.html"><p class="text">TOP OFFERS</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12 clearfix">
-              <a href="publisher.html"><p class="publishers">PUBLISHERS</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12">
-              <a href="advertisers.html"><p class="advertisers">ADVERTISERS</p></a>
-            </div>
-            <div class="col-md-2 col-sm-3 col-xs-12">
-              <a href="contact-info.html"><p class="text-2">CONTACT INFO</p></a>
-            </div>
-          </div>
         </div>
-      </section>
-      <section class="layer-wrapper">
-        <img class="layer" src="publisher-images/2.jpg" alt="">
-      </section>
-      <section class="text-wrapper">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-6 col-xs-12">
-              <div class="col">
-                <div class="layer-3"></div>
-                <p class="text-3">Maximize Your Profits</p>
-              </div>
+    </nav>
+</header>
+<main>
+    <section>
+        <div class="bg-light rounded-3">
+            <div class="container-fluid p-0">
+                <img class="img-fluid" src="images/2.jpg" alt="">
             </div>
-          </div>
         </div>
-      </section>
-      <section class="text-wrapper-2">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-10 col-xs-12">
-              <p class="text-4">KiviMobi Empowers Publishers to Maximize their Earning Potential</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="text-wrapper-3">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <p class="text-5">With KiviMobi you get access to exclusive brand partnerships, massive commissions, and cutting-edge technology that ensures your content is monetized to its fullest.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="text-wrapper-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <p class="text-6">With KiviMobi, you will be benefited from adaptable payment options, referral commission opportunities, and a lucrative loyalty program designed to boost your profitability.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="group-3">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7 col-xs-12">
-              <a href="contact-info.html"><img class="layer-2" src="publisher-images/1_3.png" alt=""></a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="group-4">
-<!--        <img class="layer-5" src="publisher-images/6.png" alt="">-->
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7 col-xs-12">
-              <div class="col">
-                <div class="layer-3"></div>
-                <p class="text-7">Win-win Partnership</p>
-                <p class="text-8">Exclusive Access</p>
-                <p class="text-9">We invest a lot of time and money into our partnerships, so we need to make sure you're serious and capable. If you value win-win solutions, think long-term and scalable opportunities with brands people love. You're welcome to join us!</p>
-              </div>
-            </div>
-            <div class="col-md-5 col-xs-12">
-              <img class="publi2" src="publisher-images/publi2.jpg" alt="">
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="group-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-5 col-xs-12">
-              <img class="publi3" src="publisher-images/publi3.jpg" alt="">
-            </div>
-            <div class="col-md-7 col-xs-12">
-              <div class="col-3">
-                <div class="wrapper-2 clearfix">
-                  <div class="layer-3"></div>
-                  <p class="text-10">Industry-Leading</p>
-                  <p class="text-11">High Converting Offers from Hundreds of Popular Brands</p>
+    </section>
+    <section>
+        <div class="container p-5">
+            <div class="row w-80 mt-2">
+                <div class="colored-line">
+                    <p class="fs-3">Maximize Your Profits</p>
                 </div>
-                <p class="text-12">We partner exclusively with brands whose products enjoy high demand globally. We also update new offers with high ROIs across top performing campaigns and geos on a weekly basis.</p>
-              </div>
+                <p class="fs-1">KiviMobi Empowers Publishers to Maximize their Earning Potential</p>
+                <p class="fs-5">With KiviMobi you get access to exclusive brand partnerships, massive commissions, and cutting-edge technology that ensures your content is monetized to its fullest.</p>
+                <p class="fs-5">With KiviMobi, you will be benefited from adaptable payment options, referral commission opportunities, and a lucrative loyalty program designed to boost your profitability.</p>
+                <div class="col-12 d-flex justify-content-center my-5">
+                    <a href="contact-info.html#contact-form" class="btn btn-dark btn-primary p-3" role="button">CLICK HERE TO GET THE HOTTEST OFFER</a>
+                </div>
             </div>
-          </div>
         </div>
-      </section>
-      <section class="group-6">
+    </section>
+    <section>
+        <div class="container p-5">
+            <div class="row w-80">
+                <div class="col-12 col-lg-7 d-flex flex-column justify-content-center">
+                    <p class="fs-3">Win-win Partnership</p>
+                    <p class="fs-2">Exclusive Access</p>
+                    <p class="fs-5">We invest a lot of time and money into our partnerships, so we need to make sure you're serious and capable. If you value win-win solutions, think long-term and scalable opportunities with brands people love. You're welcome to join us!</p>
+                </div>
+                <div class="col-12 col-lg fs-4 px-4-5">
+                    <img src="images/publi2.jpg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="container p-5">
+            <div class="row w-80">
+                <div class="col-12 col-lg-5">
+                    <img src="images/publi3.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-12 col-lg-7 d-flex flex-column justify-content-center">
+                    <p class="fs-3">Industry-Leading</p>
+                    <p class="fs-2">High Converting Offers from Hundreds of Popular Brands</p>
+                    <p class="fs-5">We partner exclusively with brands whose products enjoy high demand globally. We also update new offers with high ROIs across top performing campaigns and geos on a weekly basis.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container p-5">
+            <div class="row w-80">
+                <div class="col-12 col-lg-7 d-flex flex-column justify-content-center">
+                    <p class="fs-3">24/7 and 365 Days at Your Service</p>
+                    <p class="fs-2">Dedicated Account Managers</p>
+                    <p class="fs-5">One step away from resolutions, never get lost in the shuffle. Get recommendations tailored to your content and audience, 24/7 support, proactive insights and much more.</p>
+                </div>
+                <div class="col-12 col-lg-5">
+                    <img src="images/publi4.jpg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
         <div class="container">
-          <div class="row">
-            <div class="col-md-7 col-xs-12">
-              <div class="col-2">
-                <div class="layer-3"></div>
-                <p class="text-13">24/7 and 365 Days at Your Service</p>
-                <p class="text-14">Dedicated Account Managers</p>
-                <p class="text-15">One step away from resolutions, never get lost in the shuffle.<br>Get recommendations tailored to your content and audience, 24/7 support, proactive insights and much more.</p>
-              </div>
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p class="fs-3 fs-md-2">Our partnerships are built on value, scaled with trust, and measured solely by results.</p>
+                </div>
             </div>
-            <div class="col-md-5 col-xs-12">
-              <img class="publi4" src="publisher-images/publi4.jpg" alt="">
-            </div>
-          </div>
         </div>
-      </section>
-      <section class="text-wrapper-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <p class="text-16">Our partnerships are built on value, scaled with trust, and measured solely by results.</p>
+    </section>
+    <footer>
+        <div class="container-fluid bg-dark text-white py-3">
+            <div class="row">
+                <div class="col-12 py-5">
+                    <p>Our Office</p>
+                    <p>K.Wah Commercial Building, 18Java Road Hong Kong</p>
+                    <p>Copyright 2024-KiviMobi—All rights reserved.</p>
+                </div>
             </div>
-          </div>
         </div>
-      </section>
-      <section class="group-7">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-5 col-xs-12">
-              <div class="col-data-wrapper-2">
-                <p class="text-17"><strong class="text-style">Our Office</strong><br>K.Wah Commercial Building, 18Java Road Hong Kong</p>
-                <p class="text-18">Copyright 2024-KiviMobi—All rights reserved.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
-  </body>
+    </footer>
+</main>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+</body>
 </html>
